--- a/app/config.ini.example
+++ b/app/config.ini.example
@@ -1,6 +1,7 @@
 [event]
 event-id = 51118112
 owner-id = 10909638
+tuesday = 2026-07-28
 wednesday = 2026-07-29
 thursday = 2026-07-30
 friday = 2026-07-31
